tests/sumo/meso/junction_control/tls_coordination/good/control.limited/output.sumo
Loading net-file from 'net.net.xml'... done (2ms).
Loading additional-files from 'input_additional.add.xml'... done (0ms).
Loading done.
Simulation started with time: 0.00
Simulation ended at time: 92.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 2ms
 Real time factor: 46000
 UPS: 330000.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Duration: 22.00
 WaitingTime: 0.00
 TimeLoss: 0.00
 DepartDelay: 0.00

