tests/sumo/meso/junction_control/tls_coordination/bad/control/output.sumo
Loading net-file from 'net.net.xml' ... done (6ms).
Loading additional-files from 'input_additional.add.xml' ... done (1ms).
Loading done.
Simulation version v1_3_1+1083-5d228cb4f4 started with time: 0.00
Simulation ended at time: 198.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 5ms
 Real time factor: 39600
 UPS: 441600.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Duration: 73.60
 WaitingTime: 4.93
 TimeLoss: 51.50
 DepartDelay: 0.00

